# coderbyte-devops-sr-bootcamp

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mkdocs-exclude.yml  .pre-commit-config.yaml  ARCHITECTURE.md  BEST_PRACTICES.md  BOARD_HONEST_VERDICT.md  BOARD_READY_NOTIFICATION.md  CLOUD_STRATEGY.md  CODERBYTE_MASTERY_GUIDE.md  COMPLETE_PROBLEMS_GUIDE.md  CONTRIBUTING.md  CRITICAL_BOARD_REVIEW.md  ENGINEERING.md  FAANG_CODE_STANDARDS.md  FAANG_COMPLETE.md  FAANG_INDEX.md  FAANG_PROGRESS.md  FAANG_UPGRADE_REPORT.md  FAANG_UPGRADE_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MKDOCS_SETUP.md  Makefile  OREILLY_EDITORIAL_BOARD.md  PRODUCTION_GUIDE.md  QUORUM_BOARD.md  README.md  SECURITY.md  SITE_MAP.md  TEMP_BOARD_RC_2.md  TEMP_REPO_REVIEW.md  colophon.md  menu.sh  mkdocs.yml  preface.md  (+5 more)
.devcontainer/: devcontainer.json
.trunk/: trunk.yaml
aws-solutions-architect/: AWS_SOLUTIONS_ARCHITECT_COMPLETE.md  README.md
benchmarking/: README.md  run_benchmarks.py
benchmarks/: README.md  http_check_benchmark.py  log_parser_benchmark.py  system_health_benchmark.py
board-problems/: ADVANCED_PROBLEMS_COMPLETE.md  README.md
ci-templates/: azure-pipelines.yml  github-actions.yaml  gitlab-ci.yml
coderbyte-problems/: PROBLEMS_INDEX.md  README.md
docs/: CLOUD_STRATEGY.md  CODERBYTE_MASTERY_GUIDE.md  COMPLETE_PROBLEMS_GUIDE.md  FAANG_CODE_STANDARDS.md  FAANG_COMPLETE.md  FAANG_INDEX.md  FAANG_PROGRESS.md  FAANG_UPGRADE_REPORT.md  FAANG_UPGRADE_SUMMARY.md  F_brownfield_scenarios  IMPLEMENTATION_SUMMARY.md  (+12 more)
(+597 files in other folders)
