[tool.poetry]
name = "coderbyte-devops-sr-bootcamp"
version = "0.1.0"
description = "Production-grade DevOps/SRE bootcamp assets with AWS-first infrastructure and FAANG-grade code examples."
authors = ["Coderbyte Editorial Team"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10"
aws-xray-sdk = { version = "^2.14", optional = true }
beautifulsoup4 = "^4.11"
boto3 = { version = "^1.35", optional = true }
docker = "^6.1"
lxml = "^4.9"
prometheus-client = "^0.20"
psutil = "^5.9"
requests = "^2.32"
structlog = "^25.5"
uvloop = { version = "^0.21", markers = "sys_platform != 'win32'" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.10"
ruff = "^0.7"
pre-commit = "^4.0"

[tool.poetry.extras]
aws = ["boto3", "aws-xray-sdk"]

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"
